// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HelpCenterEditModal/> should display the component correctly 1`] = `
<div>
  <div
    class="modal-container"
    style="z-index: 5;"
  >
    <div
      class="backdrop"
    />
    <div
      class="modal opened"
      style="transition-duration: 300ms;"
    >
      Modal content
    </div>
  </div>
</div>
`;

exports[`<HelpCenterEditModal/> should display the component in fullscreen mode correctly 1`] = `
<div>
  <div
    class="modal-container"
    style="z-index: 5;"
  >
    <div
      class="backdrop"
    />
    <div
      class="modal fullscreen opened"
      style="transition-duration: 300ms;"
    >
      Modal content
    </div>
  </div>
</div>
`;
